Create partials _header, _head, _pagination and _footer htmls

--- a/djangoapp/blog/templates/blog/base.html
+++ b/djangoapp/blog/templates/blog/base.html
@@ -1,12 +1,14 @@
-{% load static %}<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "blog/css/styles.css" %}">
-    <title>Meu blog</title>
+    {% include "blog/partials/_head.html" %}
 </head>
 <body>
-    {% block content %}{% endblock content %}
+    {% include "blog/partials/_header.html" %}
+    {% block content %}
+    
+    {% endblock content %}
+    {% include "blog/partials/_pagination.html" %}
+    {% include "blog/partials/_footer.html" %}
 </body>
 </html>
