--- a/djangoapp/blog/templates/blog/base.html
+++ b/djangoapp/blog/templates/blog/base.html
@@ -5,9 +5,7 @@
 </head>
 <body>
     {% include "blog/partials/_header.html" %}
-    {% block content %}
-    
-    {% endblock content %}
+    {% block content %}{% endblock content %}
     {% include "blog/partials/_pagination.html" %}
     {% include "blog/partials/_footer.html" %}
 </body>
