--- a/djangoapp/blog/templates/blog/partials/_head.html
+++ b/djangoapp/blog/templates/blog/partials/_head.html
@@ -2,4 +2,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="{% static "blog/css/styles.css" %}">
+{% if setup.favicon %}
+    <link rel="shortcut icon" href="{{setup.favicon.url}}" type="image/png">
+{% endif %}
 <title>{{site_title}}</title>
