--- a/djangoapp/blog/templates/blog/pages/index.html
+++ b/djangoapp/blog/templates/blog/pages/index.html
@@ -5,11 +5,18 @@
     <div class="section-content-wide">
       <div class="section-gap">
 
+      {% if page_obj %}
         <div class="card-grid">
           {% for post in page_obj %}
             {% include 'blog/partials/_post-card.html' with i=forloop.counter0 %}
           {% endfor %}
         </div>
+      {% else %}
+        <div class="center">
+          <h1>Nenhum post encontrado 😢</h1>
+          <p>Volte para a página principal <a href="{% url "blog:index" %}">aqui</a>!</p>
+        </div>
+      {% endif %}
 
       </div>
     </div>
