Config CodeMirror with Java Script | Include data-language in pre tags of django_summernote | Use CodeMirror only at post.html

--- a/djangoapp/blog/static/blog/css/styles.css
+++ b/djangoapp/blog/static/blog/css/styles.css
@@ -160,6 +160,12 @@ input[type='search']::-webkit-search-results-decoration {
   -webkit-appearance: none;
 }
 
+/* CodeMirror */
+.CodeMirror {
+  height: auto !important;
+  font-size: var(--fs-smlr) !important;
+}
+
 /* Blog */
 body,
 html,
