Create search view and url | Update _header.html with search form variables

--- a/djangoapp/blog/templates/blog/pages/index.html
+++ b/djangoapp/blog/templates/blog/pages/index.html
@@ -13,7 +13,7 @@
         </div>
       {% else %}
         <div class="center">
-          <h1>Nenhum post encontrado 😢</h1>
+          <h1>Nenhum post encontrado 😢😒</h1>
           <p>Volte para a página principal <a href="{% url "blog:index" %}">aqui</a>!</p>
         </div>
       {% endif %}
